--- a/sprint-1/projects/web-page/know-your-worth/src/index.css
+++ b/sprint-1/projects/web-page/know-your-worth/src/index.css
@@ -1,19 +1,31 @@
 .home-container{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  background-color: aquamarine;
+  grid-template-rows: 1fr;
+  background-color: rgb(77,40,254);
 }
-.home-container a{
+.home-Logo{
+  background-color: #EDF3F8;
+  border: 5px solid gold;
+  padding: 10px;
+  border-radius: 100%;
+  height:auto;
+  width: 5em;
+  grid-column: 1/2;
+  margin: 0 auto;
+}
+.home-container h2{
   font-style: italic;
   color: black;
-  font-size: 25pt;
-  height: 3em;
-  text-decoration: none;
+  font-size: 30pt;
+  text-decoration: underline;
   text-align: center;
+  grid-column: 2/4;
 }
-.home-container a:hover{
+
+.home-container img:hover{
   text-decoration: none;
-  background-color: peachpuff;
+  background-color: #EDF3F8;
   color: black;
 }
 #root{
@@ -23,7 +35,7 @@
 
 .main-container{
   height: 100em;
-  background-color: blanchedalmond;
+  background-color:EDF3F8;
   text-align: center;
 }
 .main-container h2{
@@ -32,17 +44,17 @@
 #team-photo-section{
   width: 90em;
   height: 20em;
-  background-color: black;
+  background-color: #01FEF5;
   margin: 0 auto;
 }
 #opening-photo{
   width: 90em;
   height: 30em;
-  background-color: black;
+  background-color: #01FEF5;
   margin: 0 auto;
 }
 .footer-container
 {
-  background-color: aqua;
+  background-color: rgb(77,40,254);
   height: 10em;
 }
